[project]
name = "icp-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "ddddocr>=1.5.6",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "numpy>=2.2.4",
    "onnxruntime>=1.21.0",
    "opencv-python-headless>=4.11.0.86",
    "pycryptodome>=3.22.0",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "isort>=6.0.1",
    "matplotlib>=3.10.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
